tests/fixtures/invalid/var_circular.wks
# Test circular variable reference
# Variable 'a' tries to use 'b', but 'b' is not defined yet
:var "a" "%(b)"
:var "b" "%(a)"
x "Test" +write %{{echo test}}
